k8s/deployments/codepod-05-app.yml
# UI

apiVersion: apps/v1
kind: Deployment
metadata:
  name: codepod-ui-deployment
  labels:
    app: codepod-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: codepod-ui
  template:
    metadata:
      labels:
        app: codepod-ui
    spec:
      containers:
        - name: codepod-ui
          image: lihebi/codepod-ui:v0.4.3-alpha.1
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: codepod-ui-service
spec:
  selector:
    app: codepod-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

# API
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codepod-api-deployment
  labels:
    app: codepod-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: codepod-api
  template:
    metadata:
      labels:
        app: codepod-api
    spec:
      containers:
        - name: codepod-api
          image: lihebi/codepod-api:v0.4.3-alpha.1
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: codepod-api-service
spec:
  selector:
    app: codepod-api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000

# Proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codepod-proxy-deployment
  labels:
    app: codepod-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codepod-proxy
  template:
    metadata:
      labels:
        app: codepod-proxy
    spec:
      containers:
        - name: codepod-proxy
          image: lihebi/codepod-proxy:v0.4.3-alpha.1
          ports:
            - containerPort: 4010
            - containerPort: 4011

---
apiVersion: v1
kind: Service
metadata:
  name: codepod-proxy-service
spec:
  selector:
    app: codepod-proxy
  ports:
    - protocol: TCP
      port: 4010
      targetPort: 4010
    - protocol: TCP
      port: 4011
      targetPort: 4011
